# auto-commits-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  READNE.md  docker-compose.yml  makefile
migration/: Cargo.toml
migration/src/: lib.rs  m20230130_063106_create_accounts_table.rs
src/: main.rs
src/config/: db.rs
src/controllers/: accounts_controller.rs  mod.rs  root_controller.rs
src/entities/: account.rs  mod.rs  prelude.rs
