[package]
name = "auto-commits-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.5-rc", features = ["json"] }
sea-orm = { git = "https://github.com/SeaQL/sea-orm", branch = "0.10.x", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
